This is an experimental commit.  The files were created in the Windows NTFS file system using WUBI Linux but commited from Windows.  The primary changes are to build.xml in an attempt to support compiling and testing in Java 6, 7, and 8.  Compilation is typically done using Java but with 1.6 as a target so that class files version tags are compatible with Java 6.  The only changes are small formatting corrections.
The following files were modified:

M    build.xml
M    src/edu/rice/cs/drjava/model/repl/InteractionsDJDocument.java
M    src/edu/rice/cs/drjava/model/repl/JavaInterpreterTest.java


git-svn-id: file:///tmp/test-svn/trunk@5760 fe72c1cf-3628-48e9-8b72-1c46755d3cff